--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+# zk 集群IP地址
+zookeeper.cluster.hosts=10.211.55.5:2182,10.211.55.5:2183,10.211.55.5:2184,10.211.55.5:2185
+zookeeper.cluster.sessionTimeout=15000
